--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11480,3 +11480,19 @@ a.text-dark:focus {
   margin-top: 10px;
 }
 
+form.form-delete {
+  display: inline;
+}
+
+.vote-controls {
+  min-width: 60px;
+  margin-right: 30px;
+  text-align: center;
+  color: #495057;
+}
+
+.vote-controls span,
+.vote-controls a {
+  display: block;
+}
+
